--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/node": "^20.19.13",
     "@types/uuid": "^9.0.1",
